--- a/index.html
+++ b/index.html
@@ -1,26 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+    <meta content="EconWebArena: Benchmarking economic agents in realistic web environments." name="description">
+    <meta content="econwebarena, economic agents, benchmark, web environment, AI, economics" name="keywords">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>EconWebArena</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-        }
 
-        h1 {
-            color: #333;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
+          rel="stylesheet">
+    <link href="./static/images/econwebarena_logo.png" rel="icon" type="image/png">
+
+    <link href="./static/css/bulma.min.css" rel="stylesheet">
+    <link href="./static/css/bulma-carousel.min.css" rel="stylesheet">
+    <link href="./static/css/bulma-slider.min.css" rel="stylesheet">
+    <link href="./static/css/fontawesome.all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"
+          rel="stylesheet">
+    <link href="./static/css/index.css" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script defer src="./static/js/fontawesome.all.min.js"></script>
+    <script src="./static/js/bulma-carousel.min.js"></script>
+    <script src="./static/js/bulma-slider.min.js"></script>
+    <script src="./static/js/index.js"></script>
 </head>
 <body>
-<h1>🚧 EconWebArena – Coming Soon! 🚧</h1>
+
+<section class="hero">
+    <div class="hero-body">
+        <div class="container is-max-desktop">
+            <div class="columns is-centered">
+                <div class="column has-text-centered">
+                    <!-- Title. -->
+                    <h1 class="title is-1 publication-title">
+                        EconWebArena: A Benchmark for Economic Data Tasks in Realistic Web Environments for Agents
+                    </h1>
+                    <!--/ Title. -->
+
+                    <!-- Authors. -->
+                    <span class="author-block">
+                        <a href="https://zefang-liu.github.io/" target="_blank">Zefang Liu</a><sup>1,*</sup>,
+                    </span>
+                    <span class="author-block">
+                        Yinzhu Quan<sup>1,*</sup>,
+                    </span>
+                    <!--/ Authors. -->
+
+                    <!-- Affiliations. -->
+                    <div class="is-size-5 publication-authors">
+                        <span class="author-block"><sup>1</sup>Georgia Institute of Technology</span>
+                    </div>
+                    <!--/ Affiliations. -->
+
+                    <div class="is-size-6 has-text-grey">
+                        <sup>*</sup>These authors contributed equally to this work.
+                    </div>
+
+                    <div class="column has-text-centered">
+                        <div class="publication-links">
+                            <!-- Paper Link. -->
+                            <span class="link-block">
+                                <a class="external-link button is-normal is-rounded is-dark" href=#>
+                                    <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                                    <span>Paper</span>
+                                </a>
+                            </span>
+                            <!--/ Paper Link. -->
+
+                            <!-- Video Link. -->
+                            <span class="link-block">
+                                <a class="external-link button is-normal is-rounded is-dark" href=#>
+                                    <span class="icon"><i class="fab fa-youtube"></i></span>
+                                    <span>Video</span>
+                                </a>
+                            </span>
+                            <!--/ Video Link. -->
+
+                            <!-- Code Link. -->
+                            <span class="link-block">
+                                <a class="external-link button is-normal is-rounded is-dark" href=#>
+                                    <span class="icon"><i class="fab fa-github"></i></span>
+                                    <span>Code</span>
+                                </a>
+                            </span>
+                            <!--/ Code Link. -->
+
+                            <!-- Dataset Link. -->
+                            <span class="link-block">
+                                <a class="external-link button is-normal is-rounded is-dark"
+                                   href="https://huggingface.co/datasets/EconWebArena/EconWebArena">
+                                    <span class="icon"><i class="far fa-images"></i></span>
+                                    <span>Data</span>
+                                </a>
+                            </span>
+                            <!--/ Dataset Link. -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section">
+    <div class="container is-max-desktop">
+        <!-- Abstract. -->
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-four-fifths">
+                <h2 class="title is-3">Abstract</h2>
+                <div class="content has-text-justified">
+                    <p>Coming soon.</p>
+                </div>
+            </div>
+        </div>
+        <!--/ Abstract. -->
+
+        <!-- Paper Video. -->
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-four-fifths">
+                <h2 class="title is-3">Video</h2>
+                <div class="publication-video">
+                    <p>Video coming soon.</p>
+                    <!--<iframe allow="autoplay; encrypted-media" allowfullscreen frameborder="0" src=""></iframe>-->
+                </div>
+            </div>
+        </div>
+        <!--/ Paper Video. -->
+    </div>
+</section>
+
+<section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+        <h2 class="title">BibTeX</h2>
+        <pre><code>@article{econwebarena2024, title={Coming soon}, ... }</code></pre>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="container">
+        <div class="columns is-centered">
+            <div class="column is-8">
+                <div class="content">
+                    <p>
+                        This website is licensed under a
+                        <a href="http://creativecommons.org/licenses/by-sa/4.0/"
+                           rel="license" target="_blank">CC BY-SA 4.0</a> license. You are free to reuse the
+                        <a href="https://github.com/nerfies/nerfies.github.io" rel="noopener noreferrer"
+                           target="_blank"> source code</a> as long as you provide attribution by linking back to this
+                        page in the footer.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
