Update the title

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="column has-text-centered">
                     <!-- Title. -->
                     <h1 class="title is-1 publication-title">
-                        EconWebArena: A Benchmark for Economic Data Tasks in Realistic Web Environments for Agents
+                        EconWebArena: Benchmarking Autonomous Agents on Economic Tasks in Realistic Web Environments
                     </h1>
                     <!--/ Title. -->
 
