--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
                             <!-- Video Link. -->
                             <span class="link-block">
-                                <a class="external-link button is-normal is-rounded is-dark" href=#>
+                                <a class="external-link button is-normal is-rounded is-dark"
+                                   href="https://youtu.be/TwP3m2yWb7A">
                                     <span class="icon"><i class="fab fa-youtube"></i></span>
                                     <span>Video</span>
                                 </a>
@@ -322,7 +323,8 @@
                 <h2 class="title is-3">Video</h2>
                 <div class="publication-video">
                     <p>Video coming soon.</p>
-                    <!--<iframe allow="autoplay; encrypted-media" allowfullscreen frameborder="0" src=""></iframe>-->
+                    <iframe allow="autoplay; encrypted-media" allowfullscreen frameborder="0"
+                            src="https://youtu.be/TwP3m2yWb7A"></iframe>
                 </div>
             </div>
         </div>
