Update the video link

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="publication-video">
                     <p>Video coming soon.</p>
                     <iframe allow="autoplay; encrypted-media" allowfullscreen frameborder="0"
-                            src="https://youtu.be/TwP3m2yWb7A"></iframe>
+                            src="https://www.youtube.com/embed/TwP3m2yWb7A"></iframe>
                 </div>
             </div>
         </div>
