Update the bibtex

--- a/index.html
+++ b/index.html
@@ -334,7 +334,11 @@
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
-        <pre><code>@article{econwebarena2024, title={Coming soon}, ... }</code></pre>
+        <pre><code>@article{liu2025econwebarena,
+  title={EconWebArena: Benchmarking Autonomous Agents on Economic Tasks in Realistic Web Environments},
+  author={Zefang Liu and Yinzhu Quan},
+  year={2025}
+}</code></pre>
     </div>
 </section>
 
