Add the blog link

--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
                             </span>
                             <!--/ Paper Link. -->
 
+                            <!-- Medium Blog Link -->
+                            <span class="link-block">
+                                <a class="external-link button is-normal is-rounded is-dark"
+                                   href="https://medium.com/@lzf7796/just-wrapped-up-my-agentx-submission-for-the-advanced-large-language-model-agents-mooc-and-i-a1474bcf427e"
+                                   rel="noopener noreferrer" target="_blank">
+                                    <span class="icon"><i class="fas fa-pen-nib"></i></span>
+                                    <span>Blog</span>
+                                </a>
+                            </span>
+                            <!--/ Medium Blog Link -->
+
                             <!-- Video Link. -->
                             <span class="link-block">
                                 <a class="external-link button is-normal is-rounded is-dark"
