--- a/index.html
+++ b/index.html
@@ -117,6 +117,38 @@
     </div>
 </section>
 
+<!-- Demo Videos -->
+<section class="section">
+    <div class="container is-max-desktop">
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-four-fifths">
+                <h2 class="title is-3">Demo Videos</h2>
+            </div>
+        </div>
+        <div class="content has-text-centered">
+            <p>
+                The following videos demonstrate agent behavior on economic data tasks. Playback is shown at 5× speed.
+            </p>
+        </div>
+
+        <div class="columns">
+            <div class="column">
+                <video autoplay controls id="demo-video-1" loop muted playsinline
+                       style="width: 100%; max-width: 100%; height: auto;">
+                    <source src="./static/videos/demo.mov" type="video/mp4"/>
+                </video>
+            </div>
+            <div class="column">
+                <video autoplay controls id="demo-video-2" loop muted playsinline
+                       style="width: 100%; max-width: 100%; height: auto;">
+                    <source src="./static/videos/demo.mov" type="video/mp4"/>
+                </video>
+            </div>
+        </div>
+    </div>
+</section>
+<!--/ Demo Videos -->
+
 <section class="section">
     <div class="container is-max-desktop">
         <!-- Abstract. -->
@@ -372,5 +404,14 @@
     </div>
 </footer>
 
+<script>
+    window.addEventListener("DOMContentLoaded", () => {
+        const demo1 = document.getElementById("demo-video-1");
+        const demo2 = document.getElementById("demo-video-2");
+
+        if (demo1) demo1.playbackRate = 5.0;
+        if (demo2) demo2.playbackRate = 5.0;
+    });
+</script>
 </body>
 </html>
