Update the summary

--- a/index.html
+++ b/index.html
@@ -154,22 +154,13 @@
         <!-- Abstract. -->
         <div class="columns is-centered has-text-centered">
             <div class="column is-four-fifths">
-                <h2 class="title is-3">Abstract</h2>
+                <h2 class="title is-3">Summary</h2>
                 <div class="content has-text-justified">
                     <p>
-                        We introduce EconWebArena, a benchmark for evaluating autonomous agents on complex, multimodal
-                        economic tasks within realistic web environments. It comprises 360 carefully constructed tasks
-                        sourced from over 80 authoritative websites spanning domains such as macroeconomics, financial
-                        markets, labor, trade, and public policy. Each task requires agents to navigate real-world
-                        websites, interpret structured and visual content, interact with economic databases, and extract
-                        precise information through multi-step workflows. After generating initial task candidates using
-                        state-of-the-art language models, we manually review and curate each task to ensure clarity,
-                        feasibility, and grounding in reliable sources. Unlike prior benchmarks, EconWebArena emphasizes
-                        accuracy, source reliability, and temporal specificity in web-based economic analysis. We
-                        evaluate state-of-the-art language models acting as web agents and identify key challenges in
-                        data grounding, visual reasoning, and navigation. Our findings reveal a substantial performance
-                        gap between current web agents and the demands of real-world economic tasks, highlighting the
-                        need for further advances in domain-aware web intelligence.
+                        EconWebArena is a benchmark for evaluating AI agents on realistic economic tasks that require
+                        web navigation, data extraction, and reasoning. It includes 360 curated tasks from 82
+                        real-world websites. Current models struggle with accuracy, grounding, and complex web
+                        interactions, revealing the need for more capable, domain-aware agents.
                     </p>
                 </div>
             </div>
