Update the summary again

--- a/index.html
+++ b/index.html
@@ -117,6 +117,19 @@
     </div>
 </section>
 
+<section class="hero teaser">
+    <div class="container is-max-desktop">
+        <div class="hero-body">
+            <h2 class="subtitle">
+                EconWebArena is a benchmark for evaluating AI agents on realistic economic tasks that require web
+                navigation, data extraction, and reasoning. It includes 360 curated tasks from 82 real-world websites.
+                Current models struggle with accuracy, grounding, and complex web interactions, revealing the need for
+                more capable, domain-aware agents.
+            </h2>
+        </div>
+    </div>
+</section>
+
 <!-- Demo Videos -->
 <section class="section">
     <div class="container is-max-desktop">
@@ -151,22 +164,6 @@
 
 <section class="section">
     <div class="container is-max-desktop">
-        <!-- Abstract. -->
-        <div class="columns is-centered has-text-centered">
-            <div class="column is-four-fifths">
-                <h2 class="title is-3">Summary</h2>
-                <div class="content has-text-justified">
-                    <p>
-                        EconWebArena is a benchmark for evaluating AI agents on realistic economic tasks that require
-                        web navigation, data extraction, and reasoning. It includes 360 curated tasks from 82
-                        real-world websites. Current models struggle with accuracy, grounding, and complex web
-                        interactions, revealing the need for more capable, domain-aware agents.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <!--/ Abstract. -->
-
         <!-- Figures Section -->
         <div class="columns is-centered">
             <div class="column is-four-fifths">
