Add more demo videos

--- a/index.html
+++ b/index.html
@@ -148,37 +148,57 @@
             <div class="item">
                 <figure>
                     <video autoplay controls loop muted playsinline style="width: 100%; height: auto;">
-                        <source src="./static/videos/demo.mov" type="video/mp4"/>
+                        <source src="./static/videos/task_76.mov" type="video/mp4"/>
                     </video>
                     <figcaption class="has-text-centered is-size-6 mt-2">
-                        Task 322 (Argentina 2022 tariff rate) + GPT-4.1
+                        Task 76 (Slovakia 2025 inflation rate) + GPT-4o
                     </figcaption>
                 </figure>
             </div>
             <div class="item">
                 <figure>
                     <video autoplay controls loop muted playsinline style="width: 100%; height: auto;">
-                        <source src="./static/videos/demo.mov" type="video/mp4"/>
+                        <source src="./static/videos/task_106.mov" type="video/mp4"/>
                     </video>
                     <figcaption class="has-text-centered is-size-6 mt-2">
-                        Task 322 (Argentina 2022 tariff rate) + GPT-4.1
+                        Task 106 (HBS MBA insurance cost) + GPT-4.1
                     </figcaption>
                 </figure>
             </div>
             <div class="item">
                 <figure>
                     <video autoplay controls loop muted playsinline style="width: 100%; height: auto;">
-                        <source src="./static/videos/demo.mov" type="video/mp4"/>
+                        <source src="./static/videos/task_121.mov" type="video/mp4"/>
                     </video>
                     <figcaption class="has-text-centered is-size-6 mt-2">
-                        Task 322 (Argentina 2022 tariff rate) + GPT-4.1
+                        Task 121 (India 2030 GDP per capita) + GPT-4.1
                     </figcaption>
                 </figure>
             </div>
             <div class="item">
                 <figure>
                     <video autoplay controls loop muted playsinline style="width: 100%; height: auto;">
-                        <source src="./static/videos/demo.mov" type="video/mp4"/>
+                        <source src="./static/videos/task_202.mov" type="video/mp4"/>
+                    </video>
+                    <figcaption class="has-text-centered is-size-6 mt-2">
+                        Task 202 (Ontario 2025 unemployment rate) + GPT-4.1
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <video autoplay controls loop muted playsinline style="width: 100%; height: auto;">
+                        <source src="./static/videos/task_304.mov" type="video/mp4"/>
+                    </video>
+                    <figcaption class="has-text-centered is-size-6 mt-2">
+                        Task 304 (SBA 7(a) loan cap) + GPT-4o
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <video autoplay controls loop muted playsinline style="width: 100%; height: auto;">
+                        <source src="./static/videos/task_322.mov" type="video/mp4"/>
                     </video>
                     <figcaption class="has-text-centered is-size-6 mt-2">
                         Task 322 (Argentina 2022 tariff rate) + GPT-4.1
