Update the repo link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <!-- Code Link. -->
                             <span class="link-block">
                                 <a class="external-link button is-normal is-rounded is-dark"
-                                   href="https://github.com/econwebarena/BrowserGym">
+                                   href="https://github.com/econwebarena/BrowserGym/blob/econ-web-arena/browsergym/econwebarena/README.md">
                                     <span class="icon"><i class="fab fa-github"></i></span>
                                     <span>Code</span>
                                 </a>
